Add some attributes to video

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <video src="./assets/videos/lofi.mp4"></video>
+  <video controls autoplay muted src="./assets/videos/lofi.mp4"></video>
 </body>
 </html>
