add style icon to buttons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <title>Document</title>
 </head>
 <body>
+  <button class="button" id="backward"></button>
+  <button class="button" id="forward"></button>
+  <button class="button" id="play"></button>
+  <button class="button" id="pause"></button>
+  <button class="button" id="id">Avanzar 10 segundos</button>
   <video controls autoplay muted src="./assets/videos/lofi.mp4"></video>
 </body>
 </html>
