--- a/index.html
+++ b/index.html
@@ -11,8 +11,30 @@
   <button class="button" id="backward"></button>
   <button class="button" id="forward"></button>
   <button class="button" id="play"></button>
-  <button class="button" id="pause"></button>
+  <button class="button" hidden id="pause"></button>
   <button class="button" id="id">Avanzar 10 segundos</button>
-  <video controls autoplay muted src="./assets/videos/lofi.mp4"></video>
+  <video id="video" poster="./assets/images/poster.jpg" controls muted src="./assets/videos/lofi.mp4"></video>
+<script>
+  const $video = document.querySelector('#video');
+  const $play = document.querySelector('#play');
+  const $pause = document.querySelector('#pause');
+
+  $play.addEventListener('click', handlePlay);
+  $pause.addEventListener('click', handlePause);
+
+  function handlePlay() {
+    $video.play();
+    $play.hidden = true;
+    $pause.hidden = false;
+    console.log('holi');
+  }
+  function handlePause() {
+    $video.pause();
+    $pause.hidden = true;
+    $play.hidden = false;
+    console.log('holi2');
+  }
+
+</script>
 </body>
 </html>
