Add wrapper and player styles

--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
   <title>Document</title>
 </head>
 <body>
-  <button class="button" id="backward" aria-label="Retroceder 10 segundos" title="Retroceder 10 segundos"></button>
-  <button class="button" id="forward" aria-label="Avanzar 10 segundos" title="Avanzar 10 segundos"></button>
-  <button class="button" id="play" aria-label="Reproducir" title="Reproducir"></button>
-  <button class="button" hidden id="pause" aria-label="Pausar" title="Pausar"></button>
-  <video id="video" poster="./assets/images/poster.jpg" controls muted src="./assets/videos/lofi.mp4"></video>
+  <div class="wrapper">
+    <div class="player">
+      <button class="button" id="backward" aria-label="Retroceder 10 segundos" title="Retroceder 10 segundos"></button>
+      <button class="button" id="forward" aria-label="Avanzar 10 segundos" title="Avanzar 10 segundos"></button>
+      <button class="button" id="play" aria-label="Reproducir" title="Reproducir"></button>
+      <button class="button" hidden id="pause" aria-label="Pausar" title="Pausar"></button>
+      <video id="video" poster="./assets/images/poster.jpg" controls muted src="./assets/videos/lofi.mp4"></video>
+    </div>
+  </div>
 <script>
   const $video = document.querySelector('#video');
   const $play = document.querySelector('#play');
