--- a/index.html
+++ b/index.html
@@ -17,27 +17,6 @@
       <video id="video" poster="./assets/images/poster.jpg" controls muted src="./assets/videos/lofi.mp4"></video>
     </div>
   </div>
-<script>
-  const $video = document.querySelector('#video');
-  const $play = document.querySelector('#play');
-  const $pause = document.querySelector('#pause');
-
-  $play.addEventListener('click', handlePlay);
-  $pause.addEventListener('click', handlePause);
-
-  function handlePlay() {
-    $video.play();
-    $play.hidden = true;
-    $pause.hidden = false;
-    console.log('holi');
-  }
-  function handlePause() {
-    $video.pause();
-    $pause.hidden = true;
-    $play.hidden = false;
-    console.log('holi2');
-  }
-
-</script>
+  <script src="./js/script.js"></script>
 </body>
 </html>
