add progress bar without functionality

--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
 <body>
   <div class="wrapper">
     <div class="player">
-      <button class="button" id="backward" aria-label="Retroceder 10 segundos" title="Retroceder 10 segundos"></button>
-      <button class="button" id="forward" aria-label="Avanzar 10 segundos" title="Avanzar 10 segundos"></button>
-      <button class="button" id="play" aria-label="Reproducir" title="Reproducir"></button>
-      <button class="button" hidden id="pause" aria-label="Pausar" title="Pausar"></button>
-      <video id="video" poster="./assets/images/poster.jpg" controls muted src="./assets/videos/lofi.mp4"></video>
+      <h2 class="player-title">Música para programadores</h2>
+      <div class="player-actions">
+        <button class="button" id="backward" aria-label="Retroceder 10 segundos" title="Retroceder 10 segundos"></button>
+        <button class="button" id="forward" aria-label="Avanzar 10 segundos" title="Avanzar 10 segundos"></button>
+        <button class="button" id="play" aria-label="Reproducir" title="Reproducir"></button>
+        <button class="button" hidden id="pause" aria-label="Pausar" title="Pausar"></button>
+      </div>
+      <video id="video" poster="./assets/images/poster.jpg" muted src="./assets/videos/lofi.mp4"></video>
+      <div class="player-progress">
+        <input type="range">
+      </div>
     </div>
   </div>
   <script src="./js/script.js"></script>
