add progress bar functionallity

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
       <video id="video" poster="./assets/images/poster.jpg" muted src="./assets/videos/lofi.mp4"></video>
       <div class="player-progress">
-        <input type="range">
+        <input id="progress" type="range" min="0" value="0" step="1">
       </div>
     </div>
   </div>
